// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table.Paging renders correctly with custom values 1`] = `
<div
  className="af-paging"
>
  <div
    className="af-paging__limit"
  >
    <div
      className="af-paging__limit"
    >
      <form
        className="af-paging__form"
      >
        <div
          className="af-form__group"
        >
          <div
            className="col col-sm-2 col-md-2 col-lg-2 col-xl-2"
          >
            <label
              className="af-form__group-label"
              htmlFor="pagingid"
            >
              Show
            </label>
          </div>
          <div
            className="col col-sm-10 col-md-10 col-lg-10 col-xl-10"
          >
            <div
              className="af-form__select"
            >
              <div
                className="af-form__select-container"
              >
                <select
                  className="af-form__input-select"
                  id="pagingid"
                  onChange={[Function]}
                  value={20}
                >
                  <option
                    value={5}
                  >
                    5
                  </option>
                  <option
                    value={10}
                  >
                    10
                  </option>
                  <option
                    value={25}
                  >
                    25
                  </option>
                  <option
                    value={50}
                  >
                    50
                  </option>
                  <option
                    value={100}
                  >
                    100
                  </option>
                </select>
                <span
                  className="glyphicon glyphicon-menu-down"
                />
              </div>
              <span
                className="af-form__input-cmplt"
              >
                elements
              </span>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
  <div
    className="af-paging__pager"
  >
    <nav
      className="af-pager"
    >
      <ul
        className="af-pager__pagination"
      >
        <li
          className="af-pager__item af-pager__item--disabled"
        >
          <span
            className="af-pager__item-nolink"
          >
            <i
              aria-hidden="true"
              className="glyphicon glyphicon-chevron-left"
            />
          </span>
        </li>
        <li
          className="af-pager__item af-pager__item--disabled"
        >
          <span
            className="af-pager__item-link"
          >
            1
             
            of
             
            10
          </span>
        </li>
        <li
          className="af-pager__item"
        >
          <a
            className="af-pager__item-link"
            href="#"
            onClick={[Function]}
            role="button"
          >
            <i
              aria-hidden="true"
              className="glyphicon glyphicon-chevron-right"
            />
          </a>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`Table.Paging renders correctly with default values 1`] = `
<div
  className="af-paging"
>
  <div
    className="af-paging__limit"
  >
    <div
      className="af-paging__limit"
    >
      <form
        className="af-paging__form"
      >
        <div
          className="af-form__group"
        >
          <div
            className="col col-sm-2 col-md-2 col-lg-2 col-xl-2"
          >
            <label
              className="af-form__group-label"
              htmlFor="pagingid"
            >
              Afficher
            </label>
          </div>
          <div
            className="col col-sm-10 col-md-10 col-lg-10 col-xl-10"
          >
            <div
              className="af-form__select"
            >
              <div
                className="af-form__select-container"
              >
                <select
                  className="af-form__input-select"
                  id="pagingid"
                  onChange={[Function]}
                  value={20}
                >
                  <option
                    value={5}
                  >
                    5
                  </option>
                  <option
                    value={10}
                  >
                    10
                  </option>
                  <option
                    value={25}
                  >
                    25
                  </option>
                  <option
                    value={50}
                  >
                    50
                  </option>
                  <option
                    value={100}
                  >
                    100
                  </option>
                </select>
                <span
                  className="glyphicon glyphicon-menu-down"
                />
              </div>
              <span
                className="af-form__input-cmplt"
              >
                éléments
              </span>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
  <div
    className="af-paging__pager"
  >
    <nav
      className="af-pager"
    >
      <ul
        className="af-pager__pagination"
      >
        <li
          className="af-pager__item af-pager__item--disabled"
        >
          <span
            className="af-pager__item-nolink"
          >
            « Précédent
          </span>
        </li>
        <li
          className="af-pager__item af-pager__item--active"
        >
          <a
            className="af-pager__item-link"
            href="#"
            onClick={[Function]}
          >
            <span>
              1
            </span>
          </a>
        </li>
        <li
          className="af-pager__item"
        >
          <a
            className="af-pager__item-link"
            href="#"
            onClick={[Function]}
          >
            <span>
              2
            </span>
          </a>
        </li>
        <li
          className="af-pager__item af-pager__item--disabled"
        >
          <span
            className="af-pager__item-link"
          >
            ...
          </span>
        </li>
        <li
          className="af-pager__item"
        >
          <a
            className="af-pager__item-link"
            href="#"
            onClick={[Function]}
          >
            <span>
              10
            </span>
          </a>
        </li>
        <li
          className="af-pager__item"
        >
          <a
            className="af-pager__item-link"
            href="#"
            onClick={[Function]}
            role="button"
          >
            Suivant »
          </a>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;
